--- a/pub/pom.xml
+++ b/pub/pom.xml
@@ -3,25 +3,30 @@
   <groupId>com.xworkz</groupId>
   <artifactId>pub</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+  <mysql.version>8.0.26</mysql.version>
+  <hibernate.version>5.6.10.Final</hibernate.version>
+  <lombok.version>1.18.24</lombok.version>
+  </properties>
   <dependencies>
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.26</version>
+    <version>${mysql.version}</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 <dependency>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
-    <version>1.18.24</version>
+    <version>${lombok.version}</version>
     <scope>provided</scope>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 <dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-core</artifactId>
-    <version>5.6.10.Final</version>
+    <version>${hibernate.version}</version>
 </dependency>
 
   </dependencies>
