--- a/market/pom.xml
+++ b/market/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.xworkz</groupId>
-  <artifactId>cartoon</artifactId>
+  <artifactId>market</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
   <mysql.version>8.0.30</mysql.version>
   <hibernate.version>5.6.10.Final</hibernate.version>
   <lombok.version>1.18.24</lombok.version>
-  <quarkus.version>2.11.2.Final</quarkus.version>
+  <validation.version>2.0.1.Final</validation.version>
   </properties>
   <dependencies>
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -29,11 +29,11 @@
     <version>${lombok.version}</version>
     <scope>provided</scope>
 </dependency>
-<!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-hibernate-validator -->
+<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 <dependency>
-    <groupId>io.quarkus</groupId>
-    <artifactId>quarkus-hibernate-validator</artifactId>
-    <version>${quarkus.version}</version>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>${validation.version}</version>
 </dependency>
   </dependencies>
   <build>
